Etapa 2/Compilador minijava - etapa 2/bin/tests/tests sintácticos/invalidos/test12.java
/* Test12
 * @ Objetivo:Detectar que faltan los parentesis que encierran la expresion
 * a ser analizada por el if.
 */
class clase
{
	dynamic boolean metodo()
	{
		if  4 >= 5 
			return true;
		else
			return false;
	}
	
}

